k8s/base/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      # UID Grafana
      securityContext:
        runAsUser: 472
        fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:10.4.2
          # Présent mais c'est la valeur par défaut car l'image demandé n'est pas latest
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              memory: "512Mi"  # Ce qu'il demande au démarrage
              cpu: "300m"      # 0.3 vCPU
            limits:
              memory: "512Mi"  # Le plafond à ne pas dépasser
              cpu: "500m"      # 0.5 vCPU maximum

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana

            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources

            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards

            - name: grafana-alerting
              mountPath: /etc/grafana/provisioning/alerting

            - name: grafana-dashboards
              mountPath: /var/lib/grafana/dashboards

          readinessProbe:
            httpGet:
              path: /grafana/login
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /grafana/login
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20

      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc

        - name: grafana-datasources
          configMap:
            name: grafana-datasources

        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider

        - name: grafana-alerting
          configMap:
            name: grafana-alerting

        - name: grafana-dashboards
          hostPath:
            path: /home/ubuntu/Template_MLOps_accidents/k8s/base/grafana/dashboards_json

        # configMap supprimé dans le kustomization.yam et remplacé par ci-dessus
        #- name: grafana-dashboards
        #  configMap:
        #    name: grafana-dashboards
