k8s/base/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    # 1. Réécriture du chemin (pour enlever /mlflow)
    # Même raison que pour airflow-webserver
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    # 2. Rate Limiting (Équivalent de zone=apilimit rate=10r/s burst=50)
    # limit-rps: 10 correspond au "rate=10r/s"
    # limit-burst-multiplier: 50 correspond au "burst=50"
    # nodelay est activé par défaut dans ingress-nginx
    nginx.ingress.kubernetes.io/limit-rps: "10"
    # 2 car il fait 2*rps = 20 (comme dans nginx)
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          #- path: /grafana(/|$)(.*)
          #  pathType: ImplementationSpecific
          - path: /grafana
            # Prefix pour indiquer que le chemin doit commencer par /airflow et c'est ce qu'on veut
            pathType: Prefix
            backend:
              service:
                name: grafana
                # Port d'entrée défini dans service.yaml
                port:
                  number: 80
                  #number: 3000
